--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Wonderland</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Christmas Ornament</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>✨ Welcome to the Christmas Wonderland! ✨</h1>
-        <div class="tree">
-            <img src="https://media1.thehungryjpeg.com/thumbs/800_4198370_74m5clna2do6441x817kh78j9fef6cmwulekjbx6.jpg" alt="Christmas Tree">
-        </div>
-        <p>May your holidays sparkle with joy and laughter!</p>
-        <a href="gift.html" class="button">🎁 Open Your Gift 🎁</a>
-        <footer>Made with ❤️ for the holiday season. #Techin the best</footer>
-    </div>
+  <div class="grid-container">
+    <!-- 10x10 cellas su emojais -->
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">🎁</div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item ornament">🎁</div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item ornament">✨</div><div class="grid-item ornament">🎄</div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+
+    <div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div><div class="grid-item empty"></div>
+  </div>
 </body>
 </html>
